force-app/main/default/objects/Lead_Event__e/Lead_Event__e.object-meta.xml
<CustomObject>
    <description>This event is used to send leads (new and update) to UNICA and Adobe</description>
    <label>Lead Event</label>
    <pluralLabel>Lead Events</pluralLabel>
</CustomObject>