force-app/main/default/objects/Lead_Event__e/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Account Number</description>
    <label>Account Number</label>
    <length>23</length>
    <type>Text</type>
</CustomField>