force-app/main/default/objects/Lead_Event__e/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <description>Business ID</description>
    <label>Business ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>