force-app/main/default/objects/Lead_Event__e/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <description>Campaign Code</description>
    <label>Campaign Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>