force-app/main/default/objects/Lead_Event__e/fields/CLG_ID__c.field-meta.xml
<CustomField>
    <fullName>CLG_ID__c</fullName>
    <description>CLG ID</description>
    <label>CLG ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>