force-app/main/default/objects/Lead_Event__e/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Company</description>
    <label>Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>