force-app/main/default/objects/Lead_Event__e/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <description>Customer ID</description>
    <label>Customer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>