force-app/main/default/objects/Lead_Event__e/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Customer Type</description>
    <label>Customer Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>