force-app/main/default/objects/Lead_Event__e/fields/Expressed_Interest__c.field-meta.xml
<CustomField>
    <fullName>Expressed_Interest__c</fullName>
    <label>Expressed Interest</label>
    <length>80</length>
    <type>Text</type>
</CustomField>