force-app/main/default/objects/Lead_Event__e/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Lead First Name</description>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>