force-app/main/default/objects/Lead_Event__e/fields/Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Date__c</fullName>
    <description>Followup Date</description>
    <label>Followup Date</label>
    <type>Date</type>
</CustomField>