force-app/main/default/objects/Lead_Event__e/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <description>Home Phone</description>
    <label>Home Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>