force-app/main/default/objects/Lead_Event__e/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <description>Is new customer</description>
    <label>Is New</label>
    <length>5</length>
    <type>Text</type>
</CustomField>