force-app/main/default/objects/Lead_Event__e/fields/Last_Modified_By_Lan_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Lan_Id__c</fullName>
    <description>Last Modified By Lan Id</description>
    <label>Last Modified By Lan Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>