force-app/main/default/objects/Lead_Event__e/fields/Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quality__c</fullName>
    <description>Lead Quality</description>
    <label>Lead Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>