force-app/main/default/objects/Lead_Event__e/fields/Lead_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>CC-3805: to determine if the lead platform event is related to a CCRM or ML lead</description>
    <label>Lead Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>