force-app/main/default/objects/Lead_Event__e/fields/Opp_Id__c.field-meta.xml
<CustomField>
    <fullName>Opp_Id__c</fullName>
    <description>Opp Id</description>
    <label>Opp Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>