force-app/main/default/objects/Lead_Event__e/fields/Owner_Lan_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Lan_ID__c</fullName>
    <description>Owner Lan ID</description>
    <label>Owner Lan ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>