force-app/main/default/objects/Lead_Event__e/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Postal code</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>