force-app/main/default/objects/Lead_Event__e/fields/Potential_Value__c.field-meta.xml
<CustomField>
    <fullName>Potential_Value__c</fullName>
    <description>Lead Potential Value</description>
    <label>Potential Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>