force-app/main/default/objects/Lead_Event__e/fields/Prospect_Id__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Id__c</fullName>
    <description>Prospect Id</description>
    <label>Prospect Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>