force-app/main/default/objects/Lead_Event__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of lead</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>