force-app/main/default/objects/Lead_Event__e/fields/SubStatus__c.field-meta.xml
<CustomField>
    <fullName>SubStatus__c</fullName>
    <description>Response Type Sub Status</description>
    <label>SubStatus</label>
    <length>10</length>
    <type>Text</type>
</CustomField>