force-app/main/default/objects/Lead_Event__e/fields/UNICA_Treatment_Code__c.field-meta.xml
<CustomField>
    <fullName>UNICA_Treatment_Code__c</fullName>
    <description>UNICA Treatment Code</description>
    <label>UNICA Treatment Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>