force-app/main/default/objects/Lead_Event__e/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>Work Phone</description>
    <label>Work Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>